--- a/tmux.html
+++ b/tmux.html
@@ -75,6 +75,45 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                                  
+              <div class="swiper-slide">
+                  <img src="assets/img/DrowScript.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/dshing.png" alt="">
+                </div>
+                 <div class="swiper-slide">
+                  <img src="assets/img/urlkid.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/bnn.png" alt="">
+                </div>
+                 <div class="swiper-slide">
+                  <img src="assets/img/qrl.png" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio-info" href="#1">
+              <h3 href="#1">DrowScript</h3>
+              <ul>
+                <li><strong>Contenido: </strong> Script con herramientas como <a href="https://github.com/drowkid-1/DrowShing">DrowShing</a>, <strong>URLKid, QRLink y más..</strong>.</li>
+                <li><strong>Categoría: </strong> Termux</li>
+<li><strong><a href="https://github.com/drowkid-1/DrowScript">Ver script</a></strong></li>
+</section>  
     <section class="breadcrumbs">
       <div class="container">
 
